Fix video icon alignment - Fix video icon alignment on desktop and mobile

--- a/BikeWale.UI/css/video/videosByModel.css
+++ b/BikeWale.UI/css/video/videosByModel.css
@@ -130,4 +130,11 @@
 .text-bold {
     font-weight: 600;
 }
-.sprite-video { background: url(https://imgd.aeplcdn.com/0x0/bw/static/icons/4d5057/play-14x14.png) ;position: absolute; top: 15px; display:inline-block;  height:14px;width:14px; }
+.sprite-video {
+	background: url('https://imgd.aeplcdn.com/0x0/bw/static/icons/4d5057/play-14x14.png');
+	position: absolute;
+	top: 14px;
+	display: inline-block;
+	height: 14px;
+	width: 14px;
+}
